--- a/src/jako/web/templates/source.html
+++ b/src/jako/web/templates/source.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>{{ title }}</title>
+        <title>{{ data.title }}</title>
         <link rel="stylesheet" href="//meta.wikimedia.org/api/rest_v1/data/css/mobile/base">
         <link rel="stylesheet" href="//ko.wikipedia.org/api/rest_v1/data/css/mobile/site">
         <link rel="stylesheet" href="//meta.wikimedia.org/api/rest_v1/data/css/mobile/pcs">
@@ -11,17 +11,22 @@
     <body>
         <div class="pre-content heading-holder">
             <div class="page-heading">
-                <h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">{{ title }}</span></h1>
+                <h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">{{ data.page.title }}</span></h1>
                 <div class="tagline">
-                    <a href="/source/{{ page | urlencode }}">[debug]</a>
-                    <a href="https://ja.m.wikipedia.org/wiki/{{ page | urlencode }}" target="_blank">[source]</a>
+                    <a href="https://ja.m.wikipedia.org/wiki/{{ data.page.title | urlencode }}" target="_blank">[source]</a>
                 </div>
             </div>
         </div>
 
         <div id="bodyContent" class="content">
             <div id="mw-content-text" class="mw-body-content">
-                {{ html | safe }}
+                <p>{{ chunks | length }} parts</p>
+                {% for chunk in chunks %}
+                    {{ chunk | length }}
+                    <div style="outline: 2px solid blue; margin: 1rem">
+                        {{ chunk }}
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </body>
